--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,11 @@
   "name": "Canva Free Filter",
   "description": "Chrome Extension for canva.com filter free resources",
   "version": "1.0",
-  "action": {
-    "default_icon": "icon.png"
+  "icons": {
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "content_scripts": [
       {
