--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,25 +9,22 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm test
     - run: npm run build --if-present
-    - id: packExtensionDir
+    - name: pack Extension
+      if: startsWith(github.ref, 'refs/tags/')
       uses: cardinalby/webext-buildtools-pack-extension-dir-action@v1
       with:
         extensionDir: 'dist'
         zipFilePath: 'dist/extension.zip'
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: 'dist/extension.zip'
