--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Canva Free Filter",
   "description": "Chrome Extension for canva.com filter free resources",
-  "version": "1.0",
+  "version": "0.1.3",
   "icons": {
     "16": "icon16.png",
     "32": "icon32.png",
@@ -12,12 +12,9 @@
   "content_scripts": [
       {
           "matches": ["https://www.canva.com/*"],
-          "js": ["js/vendor.js", "js/content_script.js"]
+          "js": ["js/content_script.js"]
       }
   ],
-  "background": {
-    "service_worker": "js/background.js"
-  },
   "host_permissions": [
     "https://www.canva.com/*"
   ]
