--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,9 @@ jobs:
       uses: cardinalby/webext-buildtools-pack-extension-dir-action@v1
       with:
         extensionDir: 'dist'
-        zipFilePath: 'dist/extension.zip'
+        zipFilePath: 'dist/canva-free-filter-extension.zip'
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: 'dist/extension.zip'
+        files: 'dist/canva-free-filter-extension.zip'
