--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
 lsi: false
 safe: true
 source: ./
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
+title: Canva Free Filter Extension
+description: Chrome Extension to filter the paid resources in canva so you can focus in the free ones.
+show_downloads: true
 incremental: false
 highlighter: rouge
 gist:
