--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,15 @@ jobs:
       with:
         extensionDir: 'dist'
         zipFilePath: 'dist/canva-free-filter-extension.zip'
+    - uses: cardinalby/webext-buildtools-chrome-crx-action@v2
+      with:
+        zipFilePath: 'dist/canva-free-filter-extension.zip'
+        crxFilePath: 'dist/canva-free-filter-extension.crx'
+        privateKey: ${{ secrets.CHROME_CRX_PRIVATE_KEY }}
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: 'dist/canva-free-filter-extension.zip'
+        files: |
+          'dist/canva-free-filter-extension.zip'
+          'dist/canva-free-filter-extension.crx'
