--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,18 +22,37 @@ jobs:
     - run: npm ci
     - run: npm test
     - run: npm run build --if-present
-    - name: pack Extension
+    - name: Chrome Pack Extension
       if: startsWith(github.ref, 'refs/tags/')
       uses: cardinalby/webext-buildtools-pack-extension-dir-action@v1
       with:
         extensionDir: 'dist'
         zipFilePath: 'dist/canva-free-filter-extension.zip'
-    - uses: cardinalby/webext-buildtools-chrome-crx-action@v2
+    - name: Chrome Release Extension
+      uses: cardinalby/webext-buildtools-chrome-crx-action@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
         zipFilePath: 'dist/canva-free-filter-extension.zip'
         crxFilePath: 'dist/canva-free-filter-extension.crx'
         privateKey: ${{ secrets.CHROME_CRX_PRIVATE_KEY }}
+    - name: Firefox Pack Extension
+      if: startsWith(github.ref, 'refs/tags/')
+      id: web-ext-build
+      uses: kewisch/action-web-ext@v1
+      with:
+        cmd: build
+        source: dist
+    - name: Firefox Sign Extension
+      if: startsWith(github.ref, 'refs/tags/')
+      id: web-ext-sign
+      uses: kewisch/action-web-ext@v1
+      with:
+        cmd: sign
+        source: ${{ steps.web-ext-build.outputs.target }}
+        channel: listed
+        apiKey: ${{ secrets.AMO_SIGN_KEY }}
+        apiSecret: ${{ secrets.AMO_SIGN_SECRET }}
+        timeout: 900000
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
@@ -41,3 +60,4 @@ jobs:
         files: |
           'dist/canva-free-filter-extension.zip'
           'dist/canva-free-filter-extension.crx'
+          ${{ steps.web-ext-sign.outputs.target }}
