--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "build": "webpack --config webpack/webpack.prod.js",
     "clean": "rimraf dist",
     "test": "npx jest",
-    "style": "prettier --write \"src/**/*.{ts,tsx}\""
+    "style": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "start:firefox": "web-ext run --source-dir ./dist/",
+    "build:firefox": "web-ext build --source-dir ./dist/"
   },
   "author": "",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
-  },
-  "dependencies": {
   },
   "devDependencies": {
     "@types/chrome": "0.0.158",
@@ -29,6 +29,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^8.0.0",
     "typescript": "^5.0.4",
+    "web-ext": "^7.11.0",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.0.0",
     "webpack-merge": "^5.0.0"
