--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
+  "id": "canvafreefilter@alvarolorente.dev",
   "name": "Canva Free Filter",
   "description": "Chrome Extension for canva.com filter free resources",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "icons": {
     "16": "icon16.png",
     "32": "icon32.png",
