--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,5 +40,5 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
-          'dist/canva-free-filter-extension.zip'
-          'dist/canva-free-filter-extension.crx'
+          dist/canva-free-filter-extension.zip
+          dist/canva-free-filter-extension.crx
